--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "query-string": "^7.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-helmet-async-async": "^1.1.2",
+        "react-helmet-async": "^1.1.2",
         "react-hook-form": "^7.10.0",
         "react-i18next": "^11.11.4",
         "react-redux": "^7.2.4",
